feat: 兼容市面上遵守sql协议的数据库常用字段类型🎉